--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 	  height: 18000px;
 	  -ms-interpolation-mode: bicubic;
 	  image-rendering: -moz-crisp-edges;
-
+	  max-width: 100%;
+      overflow-x: hidden;
 	  margin-top: 0px;
 	
 	}
 
 	html{
-		background: #d99260;	
+		background: #d99260;
+		max-width: 100%;
+    	overflow-x: hidden;	
 	}
 
 	.venue {
