--- a/index.html
+++ b/index.html
@@ -26,17 +26,28 @@
 	  background-image: url(img/tall_winter_birch.png), none;
 	  background-repeat: no-repeat;
 	  background-position: center top;
-	  height: 18000px;
+	  height: 16700px;
 	  -ms-interpolation-mode: bicubic;
 	  image-rendering: -moz-crisp-edges;
 	  max-width: 100%;
-      overflow-x: hidden;
 	  margin-top: 0px;
 	
 	}
 
 	html{
-		background: #d99260;
+		 background: -moz-linear-gradient(top,  #a7d3db 0%, #cfddc9 88%, #e2e3ce 94%, #fceabd 100%); /* FF3.6+ */
+
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a7d3db), color-stop(88%,#cfddc9), color-stop(94%,#e2e3ce), color-stop(100%,#fceabd)); /* Chrome,Safari4+ */
+
+    background: -webkit-linear-gradient(top,  #a7d3db 0%,#cfddc9 88%,#e2e3ce 94%,#fceabd 100%); /* Chrome10+,Safari5.1+ */
+
+    background: -o-linear-gradient(top,  #a7d3db 0%,#cfddc9 88%,#e2e3ce 94%,#fceabd 100%); /* Opera 11.10+ */
+
+    background: -ms-linear-gradient(top,  #a7d3db 0%,#cfddc9 88%,#e2e3ce 94%,#fceabd 100%); /* IE10+ */
+
+    background: linear-gradient(to bottom,  #a7d3db 0%,#cfddc9 88%,#e2e3ce 94%,#fceabd 100%); /* W3C */
+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7d3db', endColorstr='#fceabd',GradientType=0 ); /* IE6-8 */
 		max-width: 100%;
     	overflow-x: hidden;	
 	}
@@ -67,7 +78,6 @@
     	opacity: 0.05;
 	}
 
-
 	.registry {
 		position: absolute;
 		top: 1720px;
@@ -80,7 +90,6 @@
     	background-color: yellow;
     	opacity: 0.05;
 	}
-
 
 	.instagram {
 		position: absolute;
@@ -95,7 +104,6 @@
     	opacity: 0.05;
 	}
 
-
 	.hashtag {
 		position: absolute;
 		top: 2370px;
@@ -104,12 +112,10 @@
 		height: 200px;
 	}
 
-
 	.hashtag:hover { 
     	background-color: yellow;
     	opacity: 0.05;
 	}
-
 
 	.divider_1 {
 		position: absolute;
@@ -122,8 +128,7 @@
 	  	background-image: url(img/divider_2.png), none;
 	  	background-repeat: repeat-x;
 	  	background-position: center top;
-	  	z-index: -1;
-	  	
+	  	z-index: -1; 	
 	}
 
 	.divider_2 {
@@ -137,11 +142,23 @@
 	  	background-image: url(img/divider_2.png), none;
 	  	background-repeat: repeat-x;
 	  	background-position: center top;
-	  	z-index: -1;
-	  	
+	  	z-index: -1;  	
+	}
+
+	.divider_3 {
+		position: absolute;
+		top: 12830px;
+		left: 0%;
+		width: 100%;
+		height: 810px;
+		background-color: transparent;
+		background: url(img/divider_2.png);
+	  	background-image: url(img/divider_2.png), none;
+	  	background-repeat: repeat-x;
+	  	background-position: center top;
+	  	z-index: -1;  	
 	}
 	
-
 	.livebackground{
 		position: absolute;
 		top: 2370px;
@@ -157,19 +174,17 @@
 		top: 11630px;
 		left: 0%;
 		width: 100%;
-		height: 2200px;
+		height: 1200px;
 		background-color: #C1AD9A;
 		z-index: -2;
 	}
-
-
 
 	.lower_bg {
 		position: absolute;
 		top: 11630px;
 		left: 0%;
 		width: 100%;
-		height: 8000px;
+		height: 4500px;
 		background: url(img/tall_winter_birch_bottom.png);
 	  	background-image: url(img/tall_winter_birch_bottom.png), none;
 	  	background-repeat: no-repeat;
@@ -177,7 +192,7 @@
 
 	  	-ms-interpolation-mode: bicubic;
 	  	image-rendering: -moz-crisp-edges;
-
+	  	overflow-x: hidden;
 	  	margin-top: 0px;
 	}
 
@@ -189,13 +204,22 @@
 
 	.footy{
 		position: absolute;
-		top: 17200px;
+		top: 15980px;
 		background:url(img/see_you_there.png);
 		background-repeat: no-repeat;
-	  	background-position: center top;
-		height: 500px;
+	  	background-position: center bottom;
+		height: 600px;
 		width: 1100px;
 	}
+
+	.ground{
+		width: 2000px;
+		position: relative;
+		top: 10px;
+		left: -300px;
+	}
+
+
 
 </style>
 </head>
@@ -242,6 +266,8 @@
   
 
 </div>
+
+
   
 
 <div class="venue">
@@ -274,21 +300,15 @@
 	</a>
 </div>
 
-<div class="divider_1">
-</div>
-<div class="livebackground">
-</div>
-<div class="divider_2">
-</div>
+
+
 <div class="lower_bg">
 </div>
 
-<div class="registrybackground" id='registrybackground'>
-</div>
 
 
 <div class="footy">
-	
+	<img src="img/ground@2x.png" class="ground">
 </div>
 
 
