--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 </div>
 
 <div class="hashtag">
-	<a href="https://tap-hitched.github.io/live-feed/" target="_blank">
+	<a href="live-feed/" target="_blank">
 		<div style="width:100%; height: 100%"></div>
 	</a>
 </div>
