--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </div>
 
 <div class="registry">
-	<a ng-click="gotoElement('registrybackground')">
+	<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'>
 		<div style="width:100%; height: 100%"></div>
 	</a>
 </div>
