--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@
 		left: -400px;
 	}
 
+	.cl1{
+		position: absolute;
+		top: 1470px;
+		left: 15%;
+		width: 49%;
+		height: 200px;
+		z-index: 0;
+	}
+
+	.cl2{
+		position: absolute;
+		top: 1170px;
+		left: 75%;
+		width: 49%;
+		height: 200px;
+		z-index: 0;
+	}
+
 
 
 </style>
@@ -259,6 +277,13 @@
 	<a href="live-feed/" target="_blank">
 		<div style="width:100%; height: 100%"></div>
 	</a>
+</div>
+
+<div class="cl1" >
+  <img src="img/clouds_small.png">
+</div>
+<div class="cl2" >
+  <img src="img/clouds_small.png">
 </div>
 
 
