--- a/live-feed/index.html
+++ b/live-feed/index.html
@@ -122,7 +122,7 @@
 
 	<div>
 		<div class="seemore" >
-	      <h2><a href='https://www.instagram.com/mikeandmoll/' target="_blank">See more of our pics by clicking here!</a></h2>
+	      <h2><a href='https://www.instagram.com/explore/tags/taphitched/' target="_blank">See more of our pics by clicking here!</a></h2>
 		</div>
 	</div>
 	
