--- a/index.html
+++ b/index.html
@@ -170,9 +170,18 @@
 		background:url(img/see_you_there.png);
 		background-repeat: no-repeat;
 	  	background-position: center bottom;
-		height: 550px;
+		height: 750px;
 		width: 1100px;
 	}
+
+	.contact{
+		position: absolute;
+		top: 3260px;
+		height: 100px;
+		width: 1100px;
+		color: #7f8c8d;
+	}
+
 
 	.ground{
 		width: 2000px;
@@ -180,6 +189,7 @@
 		top: 0px;
 		left: -400px;
 	}
+
 
 	.cl1{
 		position: absolute;
@@ -292,6 +302,7 @@
 	<img src="img/ground@2x.png" class="ground">
 </div>
 
+</div>
 
 </body>
 
