--- a/index.html
+++ b/index.html
@@ -1,218 +1,16 @@
-<html>
+<html ng-style="{max-width: {{bodyWidth}} + 'px'}">
 <head>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.18/angular.min.js"></script>
-<script src='scripts/insta.js'></script>
-
+<script src='scripts/main.js'></script>
 <link rel="stylesheet" type="text/css" href="http://mtaptich.github.io/d3-lessons/css/setosa.css">
-<style type="text/css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	.even circle{
-		fill: #95a5a6;
-	}
-
-	.odd circle{
-		fill: #2c3e50;
-	}
-
-	img{
-		position: absolute;
-		z-index: 100;
-	}
-
-	body {
-	  background: url(img/tall_winter_birch.png);
-	  background-image: url(img/tall_winter_birch.png), none;
-	  background-repeat: no-repeat;
-	  background-position: center top;
-	  height: 2900px;
-	  -ms-interpolation-mode: bicubic;
-	  image-rendering: -moz-crisp-edges;
-	  max-width: 100%;
-	  margin-top: 0px;
-	  overflow-x: hidden;	
-	}
-
-	html{
-		background: -moz-linear-gradient(top,  #a7d3db 0%, #cfddc9 78%, #e2e3ce 88%, #fceabd 100%); /* FF3.6+ */
-
-	    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a7d3db), color-stop(78%,#cfddc9), color-stop(88%,#e2e3ce), color-stop(100%,#fceabd)); /* Chrome,Safari4+ */
-
-	    background: -webkit-linear-gradient(top,  #a7d3db 0%,#cfddc9 78%,#e2e3ce 88%,#fceabd 100%); /* Chrome10+,Safari5.1+ */
-
-	    background: -o-linear-gradient(top,  #a7d3db 0%,#cfddc9 78%,#e2e3ce 88%,#fceabd 100%); /* Opera 11.10+ */
-
-	    background: -ms-linear-gradient(top,  #a7d3db 0%,#cfddc9 78%,#e2e3ce 88%,#fceabd 100%); /* IE10+ */
-
-	    background: linear-gradient(to bottom,  #a7d3db 0%,#cfddc9 78%,#e2e3ce 88%,#fceabd 100%); /* W3C */
-
-	    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7d3db', endColorstr='#fceabd',GradientType=0 ); /* IE6-8 */
-		
-		max-width: 100%;
-	    overflow-x: hidden;	
-
-	    background-repeat: no-repeat;
-	}
-
-	.venue {
-		position: absolute;
-		top: 1220px;
-		left: 0px;
-		width: 49%;
-		height: 200px;
-	}
-
-	.venue:hover { 
-    	background-color: yellow;
-    	opacity: 0.05;
-	}
-
-	.sleeping {
-		position: absolute;
-		top: 1480px;
-		left: 55%;
-		width: 45%;
-		height: 200px;
-	}
-
-	.sleeping:hover { 
-    	background-color: yellow;
-    	opacity: 0.05;
-	}
-
-	.registry {
-		position: absolute;
-		top: 1720px;
-		left: 0px;
-		width: 49%;
-		height: 200px;
-	}
-
-	.registry:hover { 
-    	background-color: yellow;
-    	opacity: 0.05;
-	}
-
-	.instagram {
-		position: absolute;
-		top: 1950px;
-		left: 55%;
-		width: 45%;
-		height: 300px;
-	}
-	
-	.instagram:hover { 
-    	background-color: yellow;
-    	opacity: 0.05;
-	}
-
-	.hashtag {
-		position: absolute;
-		top: 2370px;
-		left: 0px;
-		width: 49%;
-		height: 200px;
-	}
-
-	.hashtag:hover { 
-    	background-color: yellow;
-    	opacity: 0.05;
-	}
-
-	
-	.livebackground{
-		position: absolute;
-		top: 2370px;
-		left: 0%;
-		width: 100%;
-		height: 9400px;
-		background-color: #CBCACF;
-		z-index: -2;
-	}
-
-	.registrybackground{
-		position: absolute;
-		top: 11630px;
-		left: 0%;
-		width: 100%;
-		height: 1200px;
-		background-color: #C1AD9A;
-		z-index: -2;
-	}
-
-	.lower_bg {
-		position: absolute;
-		top: 11630px;
-		left: 0%;
-		width: 100%;
-		height: 4500px;
-		background: url(img/tall_winter_birch_bottom.png);
-	  	background-image: url(img/tall_winter_birch_bottom.png), none;
-	  	background-repeat: no-repeat;
-	  	background-position: center top;
-
-	  	-ms-interpolation-mode: bicubic;
-	  	image-rendering: -moz-crisp-edges;
-	  	overflow-x: hidden;
-	  	margin-top: 0px;
-	}
-
-	@media (max-width:1020px){
-		.lower_bg {
-			width: 1020;
-		}
-	}
-
-	.footy{
-		position: absolute;
-		top: 2660px;
-		background:url(img/see_you_there.png);
-		background-repeat: no-repeat;
-	  	background-position: center bottom;
-		height: 750px;
-		width: 1100px;
-	}
-
-	.contact{
-		position: absolute;
-		top: 3260px;
-		height: 100px;
-		width: 1100px;
-		color: #7f8c8d;
-	}
-
-
-	.ground{
-		width: 2000px;
-		position: relative;
-		top: 0px;
-		left: -400px;
-	}
-
-
-	.cl1{
-		position: absolute;
-		top: 1470px;
-		left: 15%;
-		width: 49%;
-		height: 200px;
-		z-index: 0;
-	}
-
-	.cl2{
-		position: absolute;
-		top: 1170px;
-		left: 75%;
-		width: 49%;
-		height: 200px;
-		z-index: 0;
-	}
-
-</style>
 </head>
-<body ng-app="myApp" >
-<div >
+<body ng-app="mainApp" ng-controller="MainPage" >
+<div>
 	<div class="container" style='height: 2600px;'>
       
 	</div>
@@ -251,58 +49,57 @@
 
         </div>
     </div>
-  
-
+ 
 </div>
 
 
 
+<div class="container">
+	<div class="venue">
+		<a href="https://www.google.com/maps/dir//Penns+Peak+Restaurant,+304+Maury+Road,+Jim+Thorpe,+PA+18229/@40.8836523,-75.7170521,13z/" target="_blank">
+			<div style="width:100%; height: 100%"></div>
+		</a>
+	</div>
 
-<div class="venue">
-	<a href="https://www.google.com/maps/dir//Penns+Peak+Restaurant,+304+Maury+Road,+Jim+Thorpe,+PA+18229/@40.8836523,-75.7170521,13z/" target="_blank">
-		<div style="width:100%; height: 100%"></div>
-	</a>
+
+	<div class="sleeping">
+		<a href="https://www.google.com/maps/search/hotels/@40.8424675,-75.6706981,13z" target="_blank">
+			<div style="width:100%; height: 100%"></div>
+		</a>
+	</div>
+
+	<div class="registry">
+		<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'>
+			<div style="width:100%; height: 100%"></div>
+		</a>
+	</div>
+
+	<div class="instagram">
+		<a href="https://instagram.com/mikeandmoll/" target="_blank">
+			<div style="width:100%; height: 100%"></div>
+		</a>
+	</div>
+
+	<div class="hashtag">
+		<a href="live-feed/" target="_blank">
+			<div style="width:100%; height: 100%"></div>
+		</a>
+	</div>
+
+	<div class="cl1" >
+	  <img src="img/clouds_small.png">
+	</div>
+	<div class="cl2" >
+	  <img src="img/clouds_small.png">
+	</div>
+
+
+
+	<div class="footy">
+		<!--<img src="img/ground@2x.png" class="ground">-->
+	</div>
 </div>
 
-
-<div class="sleeping">
-	<a href="https://www.google.com/maps/search/hotels/@40.8424675,-75.6706981,13z" target="_blank">
-		<div style="width:100%; height: 100%"></div>
-	</a>
-</div>
-
-<div class="registry">
-	<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'>
-		<div style="width:100%; height: 100%"></div>
-	</a>
-</div>
-
-<div class="instagram">
-	<a href="https://instagram.com/mikeandmoll/" target="_blank">
-		<div style="width:100%; height: 100%"></div>
-	</a>
-</div>
-
-<div class="hashtag">
-	<a href="live-feed/" target="_blank">
-		<div style="width:100%; height: 100%"></div>
-	</a>
-</div>
-
-<div class="cl1" >
-  <img src="img/clouds_small.png">
-</div>
-<div class="cl2" >
-  <img src="img/clouds_small.png">
-</div>
-
-
-
-<div class="footy">
-	<img src="img/ground@2x.png" class="ground">
-</div>
-
-</div>
 
 </body>
 
