--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <script src='scripts/main.js'></script>
 <link rel="stylesheet" type="text/css" href="http://mtaptich.github.io/d3-lessons/css/setosa.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-
+<meta name = "viewport" content = "width = device-width">
+<link media="only screen and (max-device-width: 320px)"
+            href="css/iphone.css" type="text/css" rel="stylesheet" /
 </head>
 <body ng-app="mainApp" ng-controller="MainPage" >
 <div>
