--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src='scripts/main.js'></script>
 <link rel="stylesheet" type="text/css" href="http://mtaptich.github.io/d3-lessons/css/setosa.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-
+<meta name="viewport" content="width=1100, user-scalable=no, maximum-scale=0.6"> 
 </head>
 <body ng-app="mainApp" ng-controller="MainPage" >
 <div>
