--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-style="{max-width: {{bodyWidth}} + 'px'}">
+<html>
 <head>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -53,42 +53,57 @@
 
 
 
-<div class="container">
+
 	<div class="venue">
-		<a href="https://www.google.com/maps/dir//Penns+Peak+Restaurant,+304+Maury+Road,+Jim+Thorpe,+PA+18229/@40.8836523,-75.7170521,13z/" target="_blank">
-			<div style="width:100%; height: 100%"></div>
+		<a href="https://www.google.com/maps/dir//Penn's+Peak,+325+Maury+Road,+Jim+Thorpe,+PA+18229/@40.8838861,-75.7155248,13z/" target="_blank">
+			<div style=" height: 100%"></div>
 		</a>
 	</div>
 
 
 	<div class="sleeping">
 		<a href="https://www.google.com/maps/search/hotels/@40.8424675,-75.6706981,13z" target="_blank">
-			<div style="width:100%; height: 100%"></div>
+			<div style=" height: 100%"></div>
 		</a>
 	</div>
 
 	<div class="registry">
 		<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'>
-			<div style="width:100%; height: 100%"></div>
+			<div style=" height: 100%"></div>
 		</a>
 	</div>
 
 	<div class="instagram">
 		<a href="https://instagram.com/mikeandmoll/" target="_blank">
-			<div style="width:100%; height: 100%"></div>
+			<div style=" height: 100%"></div>
 		</a>
 	</div>
 
 	<div class="hashtag">
 		<a href="live-feed/" target="_blank">
-			<div style="width:100%; height: 100%"></div>
+			<div style="height: 100%"></div>
 		</a>
 	</div>
 
-	<div class="cl1" >
-	  <img src="img/clouds_small.png">
+	<div class="ourstory">
+		<a href="our-story/" target="_blank">
+			<div style="height: 100%"></div>
+		</a>
 	</div>
-	<div class="cl2" >
+
+	<div class="funactivities">
+		<a href="fun-activities/" target="_blank">
+			<div style="height: 100%"></div>
+		</a>
+	</div>
+
+	<div class="b1" ng-style="{left: {{bodyWidth*0.1}} + 'px'}">
+		<img src="img/data_bird.gif" style='z-index:100;'>
+	</div>
+	<div class="cl1" ng-style="{left: {{bodyWidth*0.1}} + 'px'}">
+	  	<img src="img/clouds_small.png">
+	</div>
+	<div class="cl2" ng-style="{left: {{bodyWidth*0.65}} + 'px'}">
 	  <img src="img/clouds_small.png">
 	</div>
 
@@ -97,7 +112,7 @@
 	<div class="footy">
 		<!--<img src="img/ground@2x.png" class="ground">-->
 	</div>
-</div>
+
 
 
 </body>
