--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
 		</a>
 	</div>
 
-	<div class="b1" ng-style="{left: {{bodyWidth*0.1}} + 'px'}">
+	<div class="b1" ng-style="{'left':bodyWidth*0.1+'px'}">
 		<img src="img/data_bird.gif" style='z-index:100;'>
 	</div>
-	<div class="cl1" ng-style="{left: {{bodyWidth*0.1}} + 'px'}">
+	<div class="cl1" ng-style="{'left':bodyWidth*0.1+'px'}">
 	  	<img src="img/clouds_small.png">
 	</div>
-	<div class="cl2" ng-style="{left: {{bodyWidth*0.65}} + 'px'}">
+	<div class="cl2" ng-style="{'left':bodyWidth*0.65+'px'}">
+
 	  <img src="img/clouds_small.png">
 	</div>
 
