--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 	<div class="sleeping">
-		<a href="https://www.google.com/maps/search/hotels/@40.8424675,-75.6706981,13z" target="_blank">
+		<a href="hotels/" target="_blank">
 			<div style=" height: 100%"></div>
 		</a>
 	</div>
@@ -92,7 +92,7 @@
 	</div>
 
 	<div class="funactivities">
-		<a href="fun-activities/" target="_blank">
+		<a href="https://www.google.com/maps/d/edit?mid=zAtv3Md1CorA.kUb3HvxW1HZk&usp=sharing" target="_blank">
 			<div style="height: 100%"></div>
 		</a>
 	</div>
