--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</div>
 
 	<div class="registry">
-		<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'>
+		<a href='http://registry.theknot.com/michael-taptich-molly-holleran-september-2016-ca/12155120'  target="_blank">
 			<div style=" height: 100%"></div>
 		</a>
 	</div>
