--- a/our-story/index.html
+++ b/our-story/index.html
@@ -98,13 +98,13 @@
 
 <p>Boys were the last thing I was concerned about, it was my first semester in college and I was just trying to pass chemistry and calculus. I could barely manage eating 3 meals a day while hiding out in the library, I had no time for meeting boys!</p>
 
-<p>Fast forward 4 years later (March,2011), keeping in mind we remained Facebook friends all this time, without actually being friends "in real life". I had seen him post random things over the past years, so he kind of kept a virtual background presence. It was now my  senior year at Penn State, all of my once shy freshman geology friends, now go to Zenos on Wednesday nights for the local bluegrass and pulled pork sandwiches. Zenos is a fun local spot which a extensive beer selection, and one of the only bars in town where you can go to escape any fraternity or sorority presence.</p>
+<p>Fast forward to 4 years later (March, 2011), keeping in mind we remained Facebook friends all this time, without actually being friends in "real life." I had seen him post random things over the past years, so he kind of kept a virtual background presence. It was now my senior year at Penn State, all of my once shy freshman geology friends now go to Zenos on Wednesday nights for the local bluegrass band and pulled pork sandwiches. Zenos is a fun local spot with a extensive beer selection, and one of the only bars in town where you can go to escape any fraternity or sorority presence.</p>
 
-<p>There I am popping around in my ripped skinny jeans and hiking boots, talking to all my friends, when I start to notice this guy that I recognize. I remember telling my friends that I think I'm Facebook friends with this guy that I see at Zenos all the time, but he never talks to me! After a few weeks of seeing this guy, I finally worked up the courage (with the help from a few troegs pale ales) to strike up a conversation with one of this friends at the time. No luck. Eventually I resorted to the ever so classy Facebook message, requesting that if we are friends on Facebook that we really should be friends in "real life" too.</p>
+<p>There I am popping around in my ripped skinny jeans and hiking boots, talking to all my friends, when I start to notice this guy that I recognize. I remember telling my friends that I think I'm Facebook friends with this guy that I see at Zenos all the time, but he never talks to me! After a few weeks of seeing this guy, I finally worked up the courage (with the help from a few Troegs Pale Ales) to strike up a conversation with one of his friends at the time. No luck. Eventually I resorted to the ever so classy Facebook message, requesting that if we are friends on Facebook that we really should be friends in "real life" too.</p>
 
 <p>I also like to swing it as I was just replying to his original Facebook message, just a few years late.</p>
 
-<p>Pretty embarrassing, but hey I would say that it worked out pretty well. :)</p>
+<p>Pretty embarrassing, but hey, I would say that it worked out pretty well. :)</p>
 			</pre>
 			
 		</div>
