--- a/live-feed/index.html
+++ b/live-feed/index.html
@@ -80,18 +80,20 @@
 
 	.heart{
 		position: absolute;
-		right: 40px;
+		right: 60px;
 		top: 20;
 		z-index: 150;
 	}
 
 	.like{
 		position: absolute;
-		right: 16px;
-		top: 30px;
+		right: 10px;
+		top: 32.5px;
 		z-index: 200;
-		font-size: 14px;
+		font-size: 20px;
 		color: #fff;
+		text-align: center;
+		width: 40px;
 	}
 
 </style>
@@ -104,9 +106,9 @@
 
 	<div class="row">
 
-		<div class="col-xs-3 pics" ng-repeat="p in pics" >
+		<div class="col-xs-4 pics" ng-repeat="p in pics" >
 			<a href="{{p.link}}" target="_blank"><img ng-src="{{p.images.low_resolution.url}}" class="img-responsive thumbnail well" title="{{p.caption.text}}" style="margin-top: 40px"></a>
-			<p class='heart'> <img src="../img/heart.png" style="width:40px; height=40px;"></p>
+			<p class='heart'> <img src="../img/heart.png" style="width:60px; height=60px;"></p>
 			<p class='like'> {{p.likes.count}}</p>
 							
 		</div>
