--- a/live-feed/index.html
+++ b/live-feed/index.html
@@ -72,9 +72,6 @@
 	}
 
 	.seemore{
-		margin-top: 50px;
-		height: 100px;
-	    width: 50%;
 	    margin: 0 auto;
 	}
 
@@ -94,6 +91,25 @@
 		color: #fff;
 		text-align: center;
 		width: 40px;
+	}
+
+	.bbox {
+	  border: none;
+	  border-left: solid 10px #ccc;
+	  padding-left: 18px;
+	  padding-bottom: 18px;
+	  margin: 2em 0 2em 5px;
+	  width: 960px;
+	  overflow-x: auto;
+	  background-color: #fff;
+	  display: block;
+	  border-radius: 0px;
+	}
+
+	.highlight{
+	  -webkit-box-shadow: 0px 5px 30px 0px rgba(59,89,152, 0.2);
+	  -moz-box-shadow:    0px 5px 30px 0px rgba(59,89,152, 0.2);
+	  box-shadow:         0px 5px 30px 0px rgba(59,89,152, 0.2);
 	}
 
 </style>
@@ -123,12 +139,11 @@
 	</div>
 
 	<div>
-		<div class="seemore" >
-	      <h2><a href='https://www.instagram.com/explore/tags/taphitched/' target="_blank">See more of our pics by clicking here!</a></h2>
+		<div class="bbox highlight" >
+	      <h2 ><a href='https://www.instagram.com/explore/tags/taphitched/' target="_blank">See more of our pics by clicking here!</a></h2>
 		</div>
 	</div>
-	
->
+
 
 
 
